[gd_scene load_steps=6 format=3 uid="uid://122m2xkwh8yx"]

[ext_resource type="Script" path="res://CreationScreens/Scripts/StudentCreation.gd" id="1_fdvmx"]
[ext_resource type="Texture2D" uid="uid://gr5s3wkxk8jn" path="res://Images/icon.svg" id="2_nh27c"]
[ext_resource type="Script" path="res://CreationScreens/Scripts/SliderSpinBox.gd" id="2_ww7wm"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_emg8q"]
bg_color = Color(0.514275, 0.514275, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_w36l2"]
bg_color = Color(0.338851, 0.352359, 0.0256102, 1)

[node name="StudentCreationScreen" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = -4.0
offset_top = -2.0
offset_right = 59.0
offset_bottom = 40.0
script = ExtResource("1_fdvmx")

[node name="TitleText" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 199.0
offset_top = 39.0
offset_right = 630.0
offset_bottom = 119.0
theme_override_font_sizes/normal_font_size = 50
text = "Add New Student"

[node name="GC" type="GridContainer" parent="."]
layout_mode = 0
offset_left = 19.0
offset_top = 122.0
offset_right = 796.0
offset_bottom = 388.0
columns = 2

[node name="RichTextLabel" type="RichTextLabel" parent="GC"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/normal_font_size = 28
text = "Name: "

[node name="NameInput" type="LineEdit" parent="GC"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 25

[node name="RichTextLabel2" type="RichTextLabel" parent="GC"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/normal_font_size = 28
text = "Age: "

[node name="AgeInput" type="HSplitContainer" parent="GC"]
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("2_ww7wm")

[node name="Slider" type="HSlider" parent="GC/AgeInput"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 18.0
max_value = 65.0
value = 18.0

[node name="SpinBox" type="SpinBox" parent="GC/AgeInput"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
min_value = 18.0
max_value = 65.0
value = 18.0

[node name="RichTextLabel3" type="RichTextLabel" parent="GC"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/normal_font_size = 28
text = "Height (cm): "

[node name="HeightInput" type="SpinBox" parent="GC"]
layout_mode = 2
min_value = 140.0
max_value = 190.0
value = 140.0

[node name="RichTextLabel4" type="RichTextLabel" parent="GC"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/normal_font_size = 28
text = "Birthday:"

[node name="BirthdaySelection" type="HBoxContainer" parent="GC"]
layout_mode = 2

[node name="Day" type="SpinBox" parent="GC/BirthdaySelection"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 1.0
max_value = 31.0
value = 1.0
alignment = 1

[node name="Month" type="OptionButton" parent="GC/BirthdaySelection"]
layout_mode = 2
size_flags_horizontal = 3
selected = 0
item_count = 12
popup/item_0/text = "January"
popup/item_1/text = "Febuary"
popup/item_1/id = 1
popup/item_2/text = "March"
popup/item_2/id = 2
popup/item_3/text = "April"
popup/item_3/id = 3
popup/item_4/text = "May"
popup/item_4/id = 4
popup/item_5/text = "June"
popup/item_5/id = 5
popup/item_6/text = "July"
popup/item_6/id = 6
popup/item_7/text = "August"
popup/item_7/id = 7
popup/item_8/text = "September"
popup/item_8/id = 8
popup/item_9/text = "October"
popup/item_9/id = 9
popup/item_10/text = "November"
popup/item_10/id = 10
popup/item_11/text = "December"
popup/item_11/id = 11

[node name="RichTextLabel5" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 24.0
offset_top = 401.0
offset_right = 593.0
offset_bottom = 442.0
theme_override_font_sizes/normal_font_size = 28
text = "Select Profile Picture:"

[node name="ImageAdder" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 411.0
offset_top = 400.0
offset_right = 790.0
offset_bottom = 620.0
texture_normal = ExtResource("2_nh27c")
ignore_texture_size = true
stretch_mode = 6

[node name="FileDialog" type="FileDialog" parent="ImageAdder"]
auto_translate_mode = 1
title = "Open a File"
initial_position = 1
size = Vector2i(400, 400)
ok_button_text = "Open"
file_mode = 0
access = 1
root_subfolder = "user://Images"

[node name="DragLabel" type="Button" parent="ImageAdder"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_disabled_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 25
theme_override_styles/disabled = SubResource("StyleBoxFlat_emg8q")
theme_override_styles/normal = SubResource("StyleBoxFlat_w36l2")
disabled = true
text = "Drag an image of 
your choice onto the 
screen for it to show up"

[node name="RichTextLabel6" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 16.0
offset_top = 590.0
offset_right = 585.0
offset_bottom = 631.0
theme_override_font_sizes/normal_font_size = 28
text = "Health Conditions:"

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_left = 28.0
offset_top = 634.0
offset_right = 806.0
offset_bottom = 1294.0

[node name="OptionButton" type="OptionButton" parent="Panel"]
layout_mode = 0
offset_left = 44.0
offset_top = 538.0
offset_right = 727.0
offset_bottom = 640.0

[node name="ScrollContainer" type="ScrollContainer" parent="Panel"]
layout_mode = 0
offset_left = 30.0
offset_top = 18.0
offset_right = 760.0
offset_bottom = 507.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Item1" type="LineEdit" parent="Panel/ScrollContainer/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
text = "Placeholder"
alignment = 1
editable = false

[node name="ProceedButton" type="Button" parent="."]
layout_mode = 0
offset_left = 96.0
offset_top = 1339.0
offset_right = 723.0
offset_bottom = 1463.0
theme_override_font_sizes/font_size = 40
text = "Proceed"

[node name="BackButton" type="Button" parent="."]
layout_mode = 0
offset_left = 257.0
offset_top = 1496.0
offset_right = 549.0
offset_bottom = 1588.0
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 30
text = "<Back"

[connection signal="drag_ended" from="GC/AgeInput/Slider" to="GC/AgeInput" method="_on_slider_drag_ended"]
[connection signal="value_changed" from="GC/AgeInput/SpinBox" to="GC/AgeInput" method="_on_spin_box_value_changed"]
[connection signal="item_selected" from="GC/BirthdaySelection/Month" to="." method="_on_month_item_selected"]
[connection signal="button_down" from="ImageAdder" to="." method="_on_image_adder_button_down"]
[connection signal="file_selected" from="ImageAdder/FileDialog" to="." method="_on_file_dialog_file_selected"]
[connection signal="item_selected" from="Panel/OptionButton" to="." method="_on_option_button_item_selected"]
[connection signal="button_down" from="ProceedButton" to="." method="_on_proceed_button_down"]
[connection signal="button_down" from="BackButton" to="." method="_on_back_button_down"]
